--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 @property --border-angle {
     inherits: false;
     initial-value: 0deg;
-    syntax: '<angle>';
+    syntax: "<angle>";
 }
 
 .input {
